Added optional generation of manifest files. Normally this option is disabled. You have to provide the option "generatemanifestfiles=1" to trigger the generation of the manifest files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -78,6 +78,7 @@ nosecommand=nosetests
 
 #[create_binary_distribution]
 #excludepythonshell=0
+#generatemanifestfiles=0
 
 [sdist]
 force-manifest=1
