Adapted build process as suggested in #662617.
In addition the following has been changed:
-Added global setup.py option "exclude-clients" to provide distribution without GUI modules
-Revised environment variables:
 - No variables have to be explicitly set, in particular you do not have to set DF_START or DF_HOME before starting the user or administrative client
- Image files are distributed using Python modules (generated resource files) instead of adding them explicitly as "image files"
- Removed obsolete directories (lib, projects)
- Distributions contain Epydoc documentation and script examples
- Added file .coverage to ignored files

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,5 @@
 [global]
-# Flag determining whether to include the GUI clients into a distribution or not
-include_clients=1
+exclude-clients=0
 
 # General information, e.g. contact, author, ...
 name=DataFinder
@@ -11,6 +10,7 @@ maintainer_email=sistec@dlr.de
 url=http://www.dlr.de/DataFinder/
 version=2.1.0
 revision=UNKNOWN
+is_release=0
 changes_file=CHANGES.txt
 license_file=LICENSE.txt
 readme_file=README.txt
@@ -20,74 +20,79 @@ build_directory=build
 epydoc_result_directory=build/epydoc
 pylint_result_directory=build/pylint
 dist_directory=build/dist
+
 unittest_result_directory=build/unittest
-image_directory=resources/images
-qt3_designer_directory=resources/qt3/ui
-generated_gui_module_directory=src/datafinder/gui/gen
 source_directory=src
-package=datafinder
-lib_source_directory=lib/src
 unittest_directory=test/unittest
-unittest_package_suffix=_test
+image_directory=resources/images
+icon_directory=resources/icons
+script_examples_directory=contrib/script_examples
+
 distutil_source_directory=build_scripts/distutils/src
 distutil_target_package=datafinder_distutils.targets
+
+generated_gui_module_directory=src/datafinder/gui/gen
+generated_configuration_directory=src/datafinder/core/configuration/gen
+
 userclient_start_script=bin/datafinder-client.py
 adminclient_start_script=bin/datafinder-admin-client.py
-static_image_module_path=src/datafinder/gui/static_images.py
 
 # Information about different script extensions.
 # Lists have to follow the same order.
 [script_extensions]
-base_directory_names=projects;script_extensions
+base_directory_names=script_extensions
 source_directory_name=src
 test_directory_name=test
 qt_designer_directory_name=ui
 generated_gui_module_directory_name=gen_ui
 
 # Specific configurations for the different build targets
-[generate_qt4_resources]
+[_gen_configuration_modules]
+generatedscommand=generateDS.py
+xsddirectory=resources/configuration
+
+[_gen_qt3gui_modules]
+pyuiccommand=pyuic
+uidirectory=resources/qt3/ui
+
+[_gen_qt4qui_modules]
 pyuiccommand=pyuic4
 pyrcccommand=pyrcc4
 uidirectory=resources/qt4/ui
 #ignoreuifilenames=
 
-[generate_gui_modules]
-pyuiccommand=pyuic
-#projectname=nast2d
-
-[generate_configuration_modules]
-generatedscommand=generateDS.py
-xsddirectory=resources/configuration
-genconfigurationdirectory=src/datafinder/core/configuration/gen
-
-[generate_static_images]
-pyuiccommand=pyuic
-
-#[create_epydoc_documentation]
-#epydoccommand=epydoc
-
-[run_pylint]
-pylintcommand=pylint
-
-[run_unittests]
+[test]
 nosecommand=nosetests
 #outputformat=xml
+coveragecommand=coverage
+coverageoutputformat=html
 
-#[create_script_extension]
-#projectname=nast2d
+[audit]
+outputformat=html
 
-#[create_binary_distribution]
-#excludepythonshell=0
-#generatemanifestfiles=0
+[_pylint]
+pylintcommand=pylint
+
+[doc]
+epydoccommand=epydoc 
+destdir=build/epydoc
+modules=src/datafinder
 
 [sdist]
 force-manifest=1
 prune=0
+        
+[bdist]
+excludepythonshell=0
+#outputformat=tar
 
-[create_nsis_installer]
+[_bdist_nsis]
 nsiscommand=C:\Programme\NSIS\makensis.exe
 nsismainscript=build_scripts/nsis/datafinder.nsi
 nsisdefinitions=build_scripts/nsis/definitions.nsi
 usericonname=DataFinder_User.ico
 adminiconname=DataFinder_Admin.ico
 starturl=http://your.server.com/repos/test/config
+
+#[package_script_extension]
+#projectname=my-script-extension
