Using the Python start script of nose directly. This allows us to create the coverage report directly with coverage executable. Thus we can produce coverage report including branch coverage statistics without modifying the current nose coverage plugin.
The coverage report creation is triggered by specifying the coverageoutputformat option.

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,10 +62,10 @@ uidirectory=resources/qt4/ui
 #ignoreuifilenames=
 
 [test]
-nosecommand=nosetests
+nosecommand=nosetests-script.py
 #outputformat=xml
 coveragecommand=coverage
-coverageoutputformat=html
+#coverageoutputformat=html
 
 [audit]
 outputformat=html
