Included the right README.
Fixes #4.

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ revision=UNKNOWN
 is_release=0
 changes_file=CHANGES.txt
 license_file=LICENSE.txt
-readme_file=README.txt
+readme_file=README.md
 
 # Definitions of global directories, packages, ...
 build_directory=build
